--- a/startbootstrap-sb-admin-1.0.4/startbootstrap-sb-admin-1.0.4/css/sb-admin.css
+++ b/startbootstrap-sb-admin-1.0.4/startbootstrap-sb-admin-1.0.4/css/sb-admin.css
@@ -9,6 +9,7 @@
 body {
     margin-top: 100px;
     background-color: #222;
+    font-family: Yekan, serif;
 }
 
 @media(min-width:768px) {
@@ -34,7 +35,7 @@ body {
 
 @media(min-width:768px) {
     #wrapper {
-        padding-left: 225px;
+        padding-right: 225px;
     }
 
     #page-wrapper {
@@ -57,7 +58,7 @@ body {
     padding-top: 15px;
     padding-bottom: 15px;
     line-height: 20px;
-    color: #999;
+    color: rgb(209, 59, 226);
 }
 
 .top-nav>li>a:hover,
@@ -70,7 +71,8 @@ body {
 }
 
 .top-nav>.open>.dropdown-menu {
-    float: left;
+    float: right;
+	text-align: right;
     position: absolute;
     margin-top: 0;
     border: 1px solid rgba(0,0,0,.15);
@@ -79,6 +81,7 @@ body {
     background-color: #fff;
     -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
     box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    right: -40px;
 }
 
 .top-nav>.open>.dropdown-menu>li>a {
@@ -86,10 +89,12 @@ body {
 }
 
 ul.message-dropdown {
-    padding: 0;
+    padding: 0px;
     max-height: 250px;
     overflow-x: hidden;
     overflow-y: auto;
+
+
 }
 
 li.message-preview {
@@ -108,6 +113,8 @@ li.message-footer {
 
 ul.alert-dropdown {
     width: 200px;
+
+
 }
 
 /* Side Navigation */
@@ -116,13 +123,13 @@ ul.alert-dropdown {
     .side-nav {
         position: fixed;
         top: 51px;
-        left: 225px;
+        right: 225px;
         width: 225px;
-        margin-left: -225px;
+        margin-right: -225px;
         border: none;
         border-radius: 0;
         overflow-y: auto;
-        background-color: #222;
+        background-color: #67075c;
         bottom: 0;
         overflow-x: hidden;
         padding-bottom: 40px;
@@ -170,6 +177,7 @@ ul.alert-dropdown {
 
 .huge {
     font-size: 40px;
+    padding-right: 15px;
 }
 
 .panel-green {
