--- a/lumino/css/styles.css
+++ b/lumino/css/styles.css
@@ -1,15 +1,14 @@
-/*
-Lumino Admin Bootstrap Template
-Version 1.0
-*/
-
-
-/*Global Styles*/
+@font-face {
+    font-family: "BYekan";
+    src: url("../fonts/BYekan.eot?#") format("eot"), url("../fonts/BYekan.woff") format("woff"), url("../fonts/BYekan.ttf") format("truetype");
+}
 
 body {
 	background: #f1f4f7;
 	padding-top: 50px;
 	color: #5f6468;
+	direction: rtl;
+	font-family: BYekan,sans-serif;
 }
 
 p {
@@ -85,7 +84,9 @@ h3, h4 {
 	outline: 0;
 	box-shadow: inset 0px 0px 0px 1px #30a5ff;
 }
-
+.nav{
+	padding-right: 0;
+}
 .navbar-header .navbar-brand {
 	color: #fff;
 	font-size: 16px;
@@ -544,7 +545,7 @@ a.bg-danger:hover {
   		position: fixed;
 		top: 50px;
 		bottom: 0;
-		left: 0;
+		right: 0;
 		z-index: 1000;
 		display: block;
 		margin: 0;
